Improve CollectionsTools